--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr.Josef Hoffmann"
   avatar           : "images/josef.jpeg"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Retired Professor of Digital Signal Processing"
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
