--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,7 @@ author:
   name             : "Dr.Josef Hoffmann"
   avatar           : "josef.jpeg"
   bio              : "Retired Professor of Digital Signal Processing"
+  fotocommunity    : 708133
 
 # Reading Files
 include:
