--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Dr. Josef Hoffmann"
 title_separator          : "-"
 name                     : &name "Dr. Josef Hoffmann"
 description              : &description "Retired Professor of Digital Signal Processing, Photography Enthusiast"
-url                      : https://uwedeportivo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/josef" # the subpath of your site, e.g. "/blog"
+url                      : https://uwedeportivo.github.io/josef # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "github.com/uwedeportivo/josef"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
