--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Dr. Josef Hoffmann"
 title_separator          : "-"
 name                     : &name "Dr. Josef Hoffmann"
-description              : &description "Retired Professor of Digital Signal Processing, Photography Enthusiast"
+description              : &description "Retired Professor of Digital Signal Processing, Photography Enthusiast, Grandfather"
 url                      : https://uwedeportivo.github.io/josef # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "github.com/uwedeportivo/josef"
