--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ atom_feed:
 author:
   name             : "Dr.Josef Hoffmann"
   avatar           : "josef.jpeg"
-  bio              : "Retired Professor of Digital Signal Processing, Photography Enthusiast"
+  bio              : "Retired Professor of Digital Signal Processing, Photography Enthusiast, Grandfather"
   fotocommunity    : 708133
 
 # Reading Files
